force-app/main/default/objects/Service_Appointment_Cancelled_Mail_Users__mdt/Service_Appointment_Cancelled_Mail_Users__mdt.object-meta.xml
<CustomObject>
    <label>Service Appointment Cancelled Mail Users</label>
    <pluralLabel>Service Appointment Cancelled Mail Users</pluralLabel>
</CustomObject>