force-app/main/default/objects/Service_Appointment_Cancelled_Mail_Users__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Captures Email of User</description>
    <inlineHelpText>Indicates Email of User</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>