force-app/main/default/objects/Service_Appointment_Cancelled_Mail_Users__mdt/fields/Training_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Training_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Coordinator</label>
    <type>Checkbox</type>
</CustomField>