force-app/main/default/objects/Service_Appointment_Cancelled_Mail_Users__mdt/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Capture Name of User</description>
    <inlineHelpText>Indicates Name of User</inlineHelpText>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>